--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -29,8 +29,20 @@
 <body style="background:#F8F8F8;">
 <div class="wp">
 	<div class="wrap-header">
-		<div class="header">		
-			<p>直播课程</p>
+		<div class="header">	
+			<div class="headers">
+				<script type="text/html" id="headers">
+					{{if lineState == 1}}
+						<p>直播课程</p>
+					{{/if}}
+					{{if lineState == 2}}
+						<p>直播预告</p>
+					{{/if}}
+					{{if lineState == 3}}
+						<p>回放课程</p>
+					{{/if}}
+				</script>
+			</div>
 			<!-- <div class="arror_return z" onclick="javascript:history.go(-1);"> -->
 			<div class="arror_return z" onclick="common_share_back();">
 				<img src="../images/back icon.png"/>
@@ -106,22 +118,24 @@
 						<img class="jiantou" src="../images/video_review.png"/>
 					</li>
 				</ul>
-		
-			</div>
-		</script>
-	</div>
-	<!--主播/时间-->
-		<div class="wrap_playTime" id="wrap_playTime">
-			<script type="text/html" id="data_name">			
 				<ul class="playTime playTimes z" onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
-					<li><img src="../images/population.png"/><span>{{heir}}</span></li>
-					<li>
+					<li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;" /><span style="margin-top: 0.15rem;">{{heir}}</span></li>
+					<li style="margin-top: 0.18rem;">
 						<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
 						<a href="javascript: ;">
 							<img src="../images/video_review.png" style="width: 0.15rem; height: 0.25rem; margin-right: 0.26rem;"  />
 						</a>
 					</li>
 				</ul>
+				<div class="both"></div>
+			</div>
+			<div class="both"></div>
+		</script>
+	</div>
+	<!--主播/时间-->
+		<div class="wrap_playTime" id="wrap_playTime">
+			<script type="text/html" id="data_name">			
+				
 				<ul class="playTime z" style="border-bottom: 0;padding: 0.22rem 0 0.22rem 0;">
 					<li style="float: left;">
 						<img style="margin-top: 0.03rem;" src="../images/Sinatv_time.png"/>
@@ -312,10 +326,10 @@
 			<img src="../images/inp_retured.png"/>
 			<span>来点儿神聊</span>
 		</div>
-		<div class="all_returned_num y">
+		<!-- <div class="all_returned_num y">
 			<img src="../images/returned.png"/>
 			<p onclick="btn_allComment()">评论<span id="criticizeCount"></span></p>
-		</div>
+		</div> -->
 	</div>
 
 	<!--评论用户弹出框-->
